[workspace]
resolver = "2"
members = [".", "actors", "kameo_type_hash_macros", "macros"]

[workspace.dependencies]
kameo = { path = ".", version = "0.19.2" }

futures = "0.3"
tokio = "1.47"

[profile.dev]
# Optimize dependencies in dev mode for better performance
# This is critical for rkyv serialization performance
opt-level = 2

[profile.dev.package."*"]
# Optimize all dependencies (including rkyv) even in dev mode
opt-level = 3

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.docs.rs]
all-features = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[package]
name = "kameo"
version = "0.19.2"
edition = "2024"
rust-version = "1.88.0"
description = "Fault-tolerant Async Actors Built on Tokio"
readme = "README.md"
repository = "https://github.com/tqwewe/kameo"
license = "MIT OR Apache-2.0"
keywords = ["actor", "tokio"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["/src"]

[features]
default = ["macros", "tracing"]
macros = ["dep:kameo_macros"]
remote = [
  "dep:kameo_remote",
  "dep:kameo_type_hash_macros",
  "dep:rkyv",
  "tracing",
]
remote_integration_tests = [] # Opt-in, heavy remote integration scenarios
tracing = ["dep:tracing", "tokio/tracing"]
metrics = ["dep:metrics"]

[dependencies]
kameo_macros = { version = "0.19.0", path = "./macros", optional = true }
kameo_type_hash_macros = { path = "./kameo_type_hash_macros", optional = true }

bitflags = "2.6"
bytes = "1.5"
downcast-rs = "2.0.1"
dyn-clone = "1.0"
futures.workspace = true
kameo_remote = { git = "https://github.com/moofone/kameo_remote", branch = "main", optional = true }
metrics = { version = "0.24.2", optional = true }
rkyv = { version = "0.8", features = ["bytecheck", "std"], optional = true }
thiserror = "2.0"
tokio = { workspace = true, features = [
  "macros",
  "rt",
  "sync",
  "time",
  "rt-multi-thread",
] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["async_tokio"] }
kameo_actors = { path = "actors" }
metrics-exporter-prometheus = "0.17.2"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-stream = { version = "0.1.15", features = ["time"] }
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serial_test = "3.2"


[[example]]
name = "forward_with_fallback"
path = "examples/local/forward_with_fallback.rs"

[[example]]
name = "stream"
path = "examples/local/stream.rs"

[[example]]
name = "distributed_registration_test_client"
path = "examples/distributed_registration_test_client.rs"
required-features = ["remote"]

[[example]]
name = "distributed_registration_test_server"
path = "examples/distributed_registration_test_server.rs"
required-features = ["remote"]

[[example]]
name = "test_list_client"
path = "examples/test_list_client.rs"
required-features = ["remote"]

[[example]]
name = "test_list_server"
path = "examples/test_list_server.rs"
required-features = ["remote"]

[[example]]
name = "test_mapping_client"
path = "examples/test_mapping_client.rs"
required-features = ["remote"]

[[example]]
name = "test_mapping_server"
path = "examples/test_mapping_server.rs"
required-features = ["remote"]

[[example]]
name = "ask_concrete_client"
path = "examples/remote/ask_concrete_client.rs"
required-features = ["remote"]

[[example]]
name = "ask_concrete_client_zerocopy"
path = "examples/remote/ask_concrete_client_zerocopy.rs"
required-features = ["remote"]

[[example]]
name = "ask_concrete_server"
path = "examples/remote/ask_concrete_server.rs"
required-features = ["remote"]

[[example]]
name = "ask_candle_client"
path = "examples/remote/ask_candle_client.rs"
required-features = ["remote"]

[[example]]
name = "ask_candle_server"
path = "examples/remote/ask_candle_server.rs"
required-features = ["remote"]

[[example]]
name = "distributed_actor_example"
path = "examples/remote/distributed_actor_example.rs"
required-features = ["remote"]

[[example]]
name = "ask_generic_client"
path = "examples/remote/ask_generic_client.rs"
required-features = ["remote"]

[[example]]
name = "ask_generic_server"
path = "examples/remote/ask_generic_server.rs"
required-features = ["remote"]

[[example]]
name = "tell_concrete_client"
path = "examples/remote/tell_concrete_client.rs"
required-features = ["remote"]

[[example]]
name = "tell_concrete_server"
path = "examples/remote/tell_concrete_server.rs"
required-features = ["remote"]

[[example]]
name = "tell_concrete_lookup_fail_client"
path = "examples/remote/tell_concrete_lookup_fail_client.rs"
required-features = ["remote"]

[[example]]
name = "tell_concrete_lookup_fail_server"
path = "examples/remote/tell_concrete_lookup_fail_server.rs"
required-features = ["remote"]

[[example]]
name = "tell_generic_client"
path = "examples/remote/tell_generic_client.rs"
required-features = ["remote"]

[[example]]
name = "tell_generic_server"
path = "examples/remote/tell_generic_server.rs"
required-features = ["remote"]

[[example]]
name = "tell_messages"
path = "examples/remote/tell_messages.rs"
required-features = ["remote"]

[[example]]
name = "test_large_only"
path = "examples/remote/test_large_only.rs"
required-features = ["remote"]

[[example]]
name = "simple_prebacktest_server"
path = "examples/remote/simple_prebacktest_server.rs"
required-features = ["remote"]

[[example]]
name = "ask_server_simple_match"
path = "examples/remote/ask_server_simple_match.rs"
required-features = ["remote"]

[[example]]
name = "ask_client_simple_match"
path = "examples/remote/ask_client_simple_match.rs"
required-features = ["remote"]

[[example]]
name = "prometheus_metrics"
path = "examples/prometheus_metrics.rs"
required-features = ["metrics"]

[[bench]]
name = "overhead"
harness = false
