[workspace]
resolver = "2"
members = [".", "actors", "macros"]

[workspace.dependencies]
kameo = { path = ".", version = "0.19.2" }

futures = "0.3"
tokio = "1.47"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.docs.rs]
all-features = true

[package]
name = "kameo"
version = "0.19.2"
edition = "2024"
rust-version = "1.88.0"
description = "Fault-tolerant Async Actors Built on Tokio"
readme = "README.md"
repository = "https://github.com/tqwewe/kameo"
license = "MIT OR Apache-2.0"
keywords = ["actor", "tokio"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["/src"]

[features]
default = ["macros", "tracing"]
macros = ["dep:kameo_macros"]
remote = [
  "dep:async-trait",
  "dep:const-fnv1a-hash",
  "dep:const-str",
  "dep:either",
  "dep:libp2p",
  "dep:libp2p-identity",
  "dep:linkme",
]
rkyv = ["dep:rkyv"]
rkyv-codec = ["rkyv", "dep:libp2p-rkyv-codec"]
serde = ["dep:serde"]
serde-codec = ["serde", "dep:rmp-serde", "libp2p?/cbor"]
tracing = ["dep:tracing", "tokio/tracing"]
metrics = ["dep:metrics"]
hotpath = ["dep:hotpath", "hotpath/hotpath"]

[dependencies]
kameo_macros = { version = "0.19.0", path = "./macros", optional = true }

async-trait = { version = "0.1", optional = true }
const-fnv1a-hash = { version = "1.1.0", optional = true }
const-str = { version = "1.1", features = ["proc"], optional = true }
anyhow = "1"
downcast-rs = "2.0.1"
dyn-clone = "1.0"
either = { version = "1.15.0", optional = true }
futures.workspace = true
hotpath = { version = "0.11", optional = true, features = ["tokio"] }
libp2p = { version = "0.56.0", features = [
  "kad",
  "macros",
  "noise",
  "mdns",
  "quic",
  "request-response",
  "tcp",
  "tokio",
  "yamux",
], optional = true }
libp2p-identity = { version = "0.2.9", optional = true }
linkme = { version = "0.3.28", optional = true }
metrics = { version = "0.24.2", optional = true }
libp2p-rkyv-codec = { version = "0.1", optional = true }
rkyv = { version = "0.8", optional = true }
rmp-serde = { version = "1.3.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0"
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }
tracing = { version = "0.1", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
kameo_actors = { path = "actors" }
libp2p = { version = "0.56.0", features = ["serde"] }
metrics-exporter-prometheus = "0.18"
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tokio-stream = { version = "0.1.15", features = ["time"] }
tokio-test = "0.4.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "remote"
required-features = ["remote", "serde-codec"]

[[example]]
name = "custom_swarm"
required-features = ["remote", "serde-codec"]

[[example]]
name = "prometheus_metrics"
required-features = ["metrics"]

[[bench]]
name = "overhead"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(tokio_unstable)',
] }
