[package]
name = "kameo_actors"
description = "Utility actors for kameo"
version = "0.1.0"
edition = "2024"
readme = "../README.md"
repository = "https://github.com/tqwewe/kameo"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "concurrency", "rust-patterns"]
keywords = ["actor", "tokio", "broker", "pool", "pubsub"]

[dependencies]
futures.workspace = true
glob = "0.3.2"
kameo.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
