[package]
name = "kameo_actors"
version = "0.4.0"
edition = "2024"
rust-version = "1.88.0"
description = "Utility actors for kameo"
readme = "../README.md"
repository = "https://github.com/tqwewe/kameo"
license = "MIT OR Apache-2.0"
keywords = ["actor", "tokio", "broker", "pool", "pubsub"]
categories = ["asynchronous", "concurrency", "rust-patterns"]
include = ["/src"]

[dependencies]
futures.workspace = true
glob = "0.3.2"
thiserror = "2.0.12"
kameo.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test = "0.4.4"
