[package]
name = "kameo_macros"
version = "0.17.0"
edition = "2021"
rust-version = "1.85.1"
description = "Fault-tolerant Async Actors Built on Tokio macros"
readme = "../README.md"
repository = "https://github.com/tqwewe/kameo"
license = "MIT OR Apache-2.0"
include = ["/src"]

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
proc-macro2 = "1.0.78"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["extra-traits", "full"] }
uuid = { version = "1.10", features = ["v4"] }
