[package]
name = "kameo_remote"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
description = "Distributed actors for kameo via gossip clustering and TCP messaging"
readme = "../README.md"
repository = "https://github.com/tqwewe/kameo"
license = "MIT OR Apache-2.0"
keywords = ["actor", "tokio", "distributed", "gossip", "cluster"]
categories = ["asynchronous", "concurrency", "network-programming"]
include = ["/src"]

[features]
tls = ["dep:rustls", "dep:tokio-rustls", "dep:rustls-pki-types"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
chacha20poly1305 = "0.10"
chitchat = "0.11"
futures.workspace = true
hkdf = "0.12"
hmac = "0.12"
kameo.workspace = true
rmp-serde = "1.3"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "logging", "std"] }
rustls-pki-types = { version = "1.10", optional = true, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["ring", "logging"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
zeroize = "1"

[dev-dependencies]
rcgen = "0.13"
tokio = { workspace = true, features = ["io-std", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "secure"
required-features = ["tls"]

[package.metadata.docs.rs]
all-features = true
