[package]
name = "kameo"
description = "Simple tokio actors - mpsc channels & no macros"
version = "0.3.2"
edition = "2021"
readme = "../../README.md"
repository = "https://github.com/tqwewe/kameo"
license = "MIT OR Apache-2.0"
categories = ["asynchronous", "concurrency", "rust-patterns"]
keywords = ["actor", "tokio"]

[dependencies]
kameo_macros = { version = "0.3.2", path = "../kameo_macros" }

async-trait = "0.1"
dyn-clone = "1.0"
futures = "0.3"
num_cpus = "1.0"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
nightly = []

[[bench]]
name = "concurrent_reads"
harness = false
