[package]
name = "kameo_actors"
version = "0.5.0"
edition = "2021"

[dependencies]
kameo = { version = "0.5.0", path = "../kameo" }

futures = "0.3"
lazy_static = "1.4"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tokio-util = "0.7"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
